--- a/client/src/assets/styles/Homecontent.css
+++ b/client/src/assets/styles/Homecontent.css
@@ -1,6 +1,6 @@
 .SLLhk, .HJRshd .MjJqGe {height: 40px;width: 40px;}
 /* .MjJqGe::before {content: "";display: block;height: max(48px, 100%);width: max(48px, 100%);position: absolute;top: 50%;left: 50%;transform: translate(-50%, -50%);} */
-
+.mt63{margin-top: 63px;}
 .z4VVe {display: flex;align-items: center;flex-shrink: 0;min-height: 40px;padding: 6px 16px;
 justify-content: flex-end;}
 
