--- a/client/src/assets/styles/Overview.css
+++ b/client/src/assets/styles/Overview.css
@@ -3,6 +3,7 @@
     height: 62vh;
     overflow-y: scroll;
 }
+.mt63{margin-top: 63px;}
 .data_context {
     -ms-overflow-style: none;  /* Internet Explorer 10+ */
     scrollbar-width: none;  /* Firefox */
