--- a/client/src/assets/styles/Register.css
+++ b/client/src/assets/styles/Register.css
@@ -3,35 +3,44 @@
     border-bottom: 2px solid #3333339e;
     padding-bottom: 4px;
     font-weight: 600;
-    color: #374d64;
+    color: #333333e0;
     border-radius: 3px;
     display: flex;
     align-items: center;
     gap: 6px;
-}
+    margin-bottom: 10px;
+  }
 .note h2 svg {
-    width: 42px;
-    height: 40px;
+    width: 33px;
+    height: 33px;
     border-radius: 6px;
 }
 .register {
-    padding: 18px 15px;
-    margin: 1rem 0.5rem;
+    padding: 18px 2px;
+    margin: 1rem 0.4rem;
     border-radius: 4px;
 }
+.mt63{margin-top: 63px;}
 .register :where(.note){}
 .register :where(.progress){}
-
+/* flex property */
+.flexthis{flex-direction: row !important;align-items: center !important;justify-content: space-between !important;
+    background: #c5d6df29; padding: 8px; margin-bottom: 20px !important;
+}
+.statusicon{display: flex;align-items: center;justify-content: space-between;width: 200px;
+    padding: 5px 8px;
+}
+.statusicon svg{font-size: 23px;}
 /* controls */
 .controls button{pad: 8px 12px;}
 /* reg content */
 .regcontent{}
-.regcontent :where(.field){display: flex;flex-direction: column; gap: 14px;
-padding: 6px 8px;
+.regcontent :where(.field){display: flex;flex-direction: column; gap: 10px;
+padding: 6px 8px;margin-bottom: 3px;
 }
 .regcontent :where(.field label){}
 .regcontent :where(.field input) {
-    height: 37px; padding: 0 5px;
+    height: 39px; padding: 0 5px;
     border-radius: 5px;font-size: 16px;
     border: 1px solid #ccc;width: 100%;
 }
