--- a/client/src/assets/styles/Navbar.css
+++ b/client/src/assets/styles/Navbar.css
@@ -7,7 +7,7 @@
     display: block;
     background: #f0fefe;
     padding: 8px;
-    box-shadow: 2px 2px 5px rgba(0,0,0,.2);
+    /* box-shadow: 2px 2px 5px rgba(0,0,0,.1); */
     font-size: 15px;
     border-radius: 4px}
     .avater a{background: linear-gradient(#adff2f3d,aliceblue);}
