--- a/client/src/assets/styles/Homecontent.css
+++ b/client/src/assets/styles/Homecontent.css
@@ -211,9 +211,10 @@ element {
   }
 .econtent :where(.exam_live .context) {
     width: 101.5%;
-    display: flex;
-    gap: 12px;
     background-color: #ffff;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
 }
 .econtent :where(.exam_live .context .ecp1){
     margin-left: -10px;
@@ -240,10 +241,10 @@ element {
     line-height: 1.3;
   }
 .econtent .ecp3 :where(ul){
-    display: flex;
-  align-items: center;
-  justify-content: left;
-  margin-top: -10px;
+  margin-top: -8px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
 }
 .econtent .ecp3 :where(ul li){
     display: inline-block;
