--- a/client/src/assets/styles/Register.css
+++ b/client/src/assets/styles/Register.css
@@ -1,19 +1,25 @@
 .note{padding: 10px 8px;}
 .note h2 {
-    border-bottom: 2px solid #3333339e;
-    padding-bottom: 4px;
-    font-weight: 600;
+    border-bottom: 1px solid #293d0c40;
+    padding-bottom: 8px;
+    font-weight: 500;
     color: #333333e0;
     border-radius: 3px;
     display: flex;
     align-items: center;
-    gap: 6px;
+    gap: 10px;
     margin-bottom: 10px;
+    font-size: 19px;
   }
 .note h2 svg {
     width: 33px;
     height: 33px;
+    color: #058305de;
     border-radius: 6px;
+    background: #ffff;
+    padding: 3px;
+    margin-top: -3px;
+    box-shadow: 2px 2px 2px;
 }
 .register {
     padding: 18px 2px;
@@ -86,6 +92,6 @@ padding: 6px 8px;margin-bottom: 3px;
     cursor: pointer;
 }
 .controls button:nth-child(2){margin-left: 30px;margin-right: 10px;}
-.login_op{background-color: gainsboro; padding: 8px;text-align: center;}
+.login_op{background-color: #0f660c10; padding: 8px;text-align: center;}
 .login_op a{color: blue; font-size: 15px;}
 .login_op span{font-size: 15px; color: #292e32;}
