--- a/client/src/assets/styles/Question.css
+++ b/client/src/assets/styles/Question.css
@@ -13,10 +13,8 @@
     width: 100%;
     z-index: 3;
     margin-bottom: 12px;
-    
-    background: repeating-linear-gradient(45deg, #0000000d, transparent 100px);
-    background: #f1f3f4;
-    background: repeating-linear-gradient(45deg, #e1e8e185, transparent 10px);
+  background: repeating-linear-gradient(90deg, #e1e8e185, transparent 4px);
+  box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 4px 0px inset;
     border-bottom: 1px solid #cccc;
 }
 .mt63{margin-top: 63px;}
@@ -33,34 +31,31 @@
   margin-top: 10px;
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 1px 0px;
 }
-.main_content .waiting h3{
-  background: #fff;
+.main_content .waiting h3 {
   padding: 16px 15px;
-  margin: 15px auto;
+  margin: 5px auto;
+  font-family: system-ui;
   border-radius: 3px;
   font-size: 19px;
   width: calc(100% - 2%);
   text-align: center;
-  box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 3px;
+  text-shadow: 0 1px #a5971d;
+  color: #332424de;
 }
-.main_content .waiting h3 .loading{font-size: 24px;}
-.main_content .device {
-  width: calc(100% - 5%);
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-left: 10px;
-  margin-top: 25px;
-  border-radius: 60%;
+.main_content .waiting h3 .loading {
+  font-size: 24px;
+  position: relative;
+  top: 3px;
 }
+
 .main_content .wifi{font-size: 41px;
   color: #6d9d32;
   position: absolute;
-  top: 11px;
+  top: 10px;
   right: 25px;
   box-shadow: 2px 2px 6px 0 rgba(0,0,0,.1);
   background: #fff;
