--- a/client/src/App.css
+++ b/client/src/App.css
@@ -78,7 +78,7 @@ position: relative;z-index: 1;
 .app_container :where(.p1 .avater) img {
     width: 100%;
     height: 100%;
-    border-radius: 50px;
+    border-radius: 50%;
     object-fit: cover;
     object-position: top;
   }
