--- a/client/src/assets/styles/Form.css
+++ b/client/src/assets/styles/Form.css
@@ -1,4 +1,12 @@
 form{}
+.mb0im{margin-bottom: 0px !important;}
+.edit-header{margin-left: 4px;
+    text-transform: uppercase;
+    color: #333333d4;
+    display: flex;gap: 4px;
+    font-size: 16px;}
+.data_context{margin-top: -20px !important;}
+.ecount svg {color: #6aac04 !important;}
 .field{display: flex; flex-direction: column;padding: 8px 6px;
 }
 .field label {
@@ -13,11 +21,11 @@ form{}
     color: #333;
     padding: 0 6px;
     font-size: 17px;
-    border-bottom: 2px solid #cccc;
+    border-bottom:1px solid #cccc;
 }
 .field input:focus,.field select{
     outline: none;
-    border-bottom: 2px solid rgb(168, 205, 105);
+    border-bottom: 1px solid rgb(168, 205, 105);
 }
 
 .gidfield{display: grid; grid-template-columns: 1fr 1fr}
