--- a/client/src/assets/styles/Overview.css
+++ b/client/src/assets/styles/Overview.css
@@ -182,7 +182,7 @@
       width: 100%;}
     .lc svg{font-size: 20px;}
     .pbtn button {
-      padding: 8px 18px;
+      padding: 10px 18px;
       font-size: 16px;
       cursor: pointer;
       margin: 10px 0;
@@ -192,8 +192,14 @@
       display: flex;
       align-items: center;
       gap: 4px;
-      box-shadow: 2px 2px 4px 0 rgba(0,0,0,.2);
-    }.pbtn button svg{font-size: 20px;}
+      box-shadow: 2px 2px 4px 0 #c5dda9;
+      border: none;
+  }
+  .pbtn button:hover{
+    background-color: #3da420;
+    color: #fff;
+  }
+  .pbtn button svg{font-size: 20px;}
     .tu .btn_group{display: flex;align-items: center;justify-content: space-between;}
       .tu .btn_group button svg{font-size: 21px;}
       .tu .btn_group button:nth-child(1):hover{
@@ -308,15 +314,14 @@
         color: #fff;}
 
 /* profile */
-.profile_img {
-  position: absolute;
-  top: 6px;
-  left: 10px;
+.profile_img .content_img {
+  width: 100px;
+  height: 100px;
+  box-shadow: #c2dfa0 0px 2px 4px 0px inset;
+  border-radius: 50%;
+  padding: 4px;
 }
-    .profile_img .content_img {
-      width: 166px;
-      height: 165px;
-    }
+.space8 table tr td,.space8 table tr td{padding:9px 4px !important;}
     .profile_img .content_img img {
       width: 100%;
       height: 100%;
